# template-python

./: .gitignore  Makefile  pyproject.toml  requirements.txt
.github/actions/pip-setup/: action.yaml
.github/actions/poetry-setup/: action.yaml
.github/actions/python-setup/: action.yaml
.github/workflows/: lint.yaml  test.yaml  workflow.yaml
