[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["Algirdas Jauniskis <jauniskis.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyright = "^1.1.263"
bandit = "^1.7.4"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".venv"
    ]
reportMissingImports = true

[tool.bandit]
exclude_dirs = [
    "**/__pycache__",
    ".venv"
    ]
